--- a/src/styles/prosemirror.css
+++ b/src/styles/prosemirror.css
@@ -2,6 +2,10 @@
   @apply p-12 px-8 sm:px-12;
 }
 
+.ProseMirror.minimal-editor {
+  @apply p-0 px-0 sm:px-0;
+}
+
 .ProseMirror .is-editor-empty:first-child::before {
   content: attr(data-placeholder);
   float: left;
